[tool.poetry]
name = "tna-django-application"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
tna-frontend-jinja = "0.29.1"
django = "^5.0.7"
django-csp = "4.0"
whitenoise = "^6.7.0"
responses = "^0.25.3"
pyquery = "^2.0.1"
sentry-sdk = "^2.20.0"
lxml = "^6.0.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
]
DJANGO_SETTINGS_MODULE = "config.settings.test"
